# rust-cli-template

./: README.md
Lab3/src/: ModifyNumber.java
template/: Cargo.toml
